--- a/.classpath
+++ b/.classpath
@@ -5,8 +5,12 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="activation-1.1.1.jar"/>
-	<classpathentry kind="lib" path="javax.mail-1.6.2.jar"/>
+	<classpathentry kind="src" path="src">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/eugen/eclipse-workspace/ProjectOODP/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/activation-1.1.1.jar" sourcepath="lib/activation-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/javax.mail-1.6.2.jar" sourcepath="lib/javax.mail-1.6.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
